docker-compose section added